# feup-sdle-pubsub

./: .gitignore  README.md  client.sh  client_loop.sh  server.sh
.github/: pull_request_template.md
.github/workflows/: clippy.yml  rust.yml
src/: Cargo.toml
src/pubsub-client/: Cargo.toml
src/pubsub-client/src/: client.rs  main.rs
src/pubsub-common/: Cargo.toml
src/pubsub-common/src/: lib.rs
src/pubsub-server/: Cargo.toml
src/pubsub-server/src/: main.rs  server.rs
