[package]
name = "pubsub-server"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
pubsub-common = { path = "../pubsub-common" }
serde_json = "1.0"
log = "0.4"
simple_logger = "2.3"
zmq = { git = "https://github.com/erickt/rust-zmq", rev = "92c638a5890a3278830590a2020758514ea369be" }
