[package]
name = "pubsub-server"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
pubsub-common = { path = "../pubsub-common" }
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zmq = { git = "https://github.com/erickt/rust-zmq", rev = "92c638a5890a3278830590a2020758514ea369be" }
